--- a/src/css/Component.css
+++ b/src/css/Component.css
@@ -6,10 +6,14 @@
     color: blue;
     text-align:center;
     justify-content: center;
+    background-color: red;
 }
 .parrafo{
     line-height: 2;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
     font-weight: 700;
+}
+.background{
+    background-color: blueviolet;
 }
